--- a/paginas/palpites-chopper.html
+++ b/paginas/palpites-chopper.html
@@ -11,8 +11,7 @@
         }
 
         img{
-            width: 1000px;
-            height: 600px;
+            width: 95vw;
         }
     </style>
 </head>
