--- a/paginas/palpites-touc.html
+++ b/paginas/palpites-touc.html
@@ -11,8 +11,8 @@
         }
 
         img{
-            width: 1000px;
-            height: 600px;
+            width: 95vw;
+            height: auto;
         }
     </style>
 </head>
